# orbit

./: .gitignore  ARCHITECTURE.md  AZURE_IMPLEMENTATION_STATUS.md  BACKEND_GUIDE.md  BACKEND_REFACTORING_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  DELTA_DETECTION_GUIDE.md  DELTA_INTEGRATION_CHANGES.md  DELTA_QUICKSTART.md  DEMO_COMPLETE_GUIDE.md  DEPENDABOT_ISSUES.md  DEPLOYMENT_GUIDE_V2.2.0-alpha.2.md  DUAL_LICENSE_NOTICE.md  Dockerfile  Dockerfile.demo  FILTER_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Lifecycle-Demo.ps1  MIGRATION_LOG.md  MIGRATION_V2.md  ORBIT_V2_ARCHITECTURE.md  ORBIT_WEB_IMPLEMENTATION_SUMMARY.md  PROGRESS_AND_CONCURRENCY.md  PROGRESS_SYSTEM.md  PROTOCOL_GUIDE.md  README.md  RELEASE.md  RETRY_OPTIMIZATION_COMPLETE.md  RETRY_OPTIMIZATION_SUMMARY.md  ROADMAP-v0.7.md  SAFETY_FIRST.md  SECURITY.md  UI_MIGRATION_PLAN.md  Validate-Orbit.ps1  (+26 more)
.cargo/: audit.toml  config.toml
.github/: ACTION_ITEMS_COMPLETED.md  BRANCH_PROTECTION_SETUP.md  FUNDING.yml  dependabot.yml  pull_request_template.md
benches/: copy_benchmark.rs  delta_throughput.rs
crates/core-audit/: Cargo.toml  beacon.json
crates/core-audit/src/: beacon.rs  error.rs  lib.rs  provenance.rs  telemetry.rs
crates/core-cdc/: Cargo.toml  README.md
crates/core-cdc/benches/: cdc_benchmark.rs
crates/core-cdc/src/: gear.rs  lib.rs
crates/core-manifest/: Cargo.toml
crates/core-manifest/src/: cargo.rs  error.rs  flightplan.rs  lib.rs  validate.rs
crates/core-resilience/: Cargo.toml
crates/core-resilience/src/: backpressure.rs  circuit_breaker.rs  connection_pool.rs  dead_letter.rs  error.rs  health_monitor.rs  lib.rs  penalization.rs  rate_limiter.rs  ref_count.rs
crates/core-semantic/: Cargo.toml  README.md
crates/core-semantic/src/: lib.rs  prioritizer.rs
crates/core-starmap/: Cargo.toml  README.md
crates/core-starmap/src/: bitmap.rs  bloom.rs  builder.rs  container.rs  error.rs  lib.rs  migrate.rs  migrate_v3.rs  reader.rs  universe.rs  universe_v3.rs
crates/magnetar/: Cargo.toml  QUICKSTART.md  README.md  example_jobs.db-shm  example_jobs.db-wal
crates/magnetar/examples/: basic_usage.rs  crash_recovery.rs  dag_dependencies.rs  resilience_demo.rs
crates/magnetar/migrations/: 20250101000000_init.sql  20250102000000_add_jobs_table.sql  20250103000000_add_star_columns.sql  20250104000000_add_artifacts_table.sql
crates/magnetar/src/: config.rs  executor.rs  lib.rs  manager.rs  migration.rs
crates/magnetar/src/backends/: mod.rs  redb.rs  sqlite.rs
crates/magnetar/src/executor/: gigantor.rs  mod.rs  standard.rs
crates/magnetar/src/pipeline/: mod.rs  router.rs
crates/magnetar/src/resilience/: README.md  circuit_breaker.rs  connection_pool.rs  error.rs  mod.rs  rate_limiter.rs
crates/magnetar/tests/: equilibrium_integration_test.rs  gigantor_stress_test.rs  integration_test.rs  repro_starvation.rs  resilience_integration_tests.rs
crates/orbit-connect/: Cargo.toml  README.md
crates/orbit-connect/src/: bulletin.rs  error.rs  lib.rs  manager.rs  system.rs
crates/orbit-connect/tests/: integration_test.rs
crates/orbit-core-interface/: Cargo.toml
crates/orbit-core-interface/src/: lib.rs
crates/orbit-observability/: Cargo.toml
crates/orbit-observability/src/: bridge.rs  chain.rs  context.rs  event.rs  lib.rs  logger.rs  metrics.rs  signer.rs  testing.rs
crates/orbit-proto/: Cargo.toml  README.md  build.rs
crates/orbit-proto/proto/: orbit.proto
crates/orbit-proto/src/: lib.rs
crates/orbit-sentinel/: Cargo.toml
crates/orbit-sentinel/src/: daemon.rs  lib.rs  medic.rs  metrics.rs  policy.rs
crates/orbit-sentinel/tests/: sentinel_resilience_test.rs
crates/orbit-star/: Cargo.toml  README.md
crates/orbit-star/src/: auth.rs  lib.rs  lifecycle.rs  main.rs  security.rs  server.rs
crates/orbit-star/tests/: p2p_transfer_test.rs
crates/orbit-web/: .gitignore  CHANGELOG.md  Cargo.toml  Leptos.toml  NEBULA_MVP_SUMMARY.md  README.md  create-demo-jobs-api.bat  create-demo-jobs.bat  start-nebula.bat  start-nebula.sh  tailwind.config.js
crates/orbit-web/public/: .gitkeep  index.html
crates/orbit-web/src/: app.rs  error.rs  lib.rs  main.rs  progress.rs  reactor.rs  server.rs  server_fns.rs  state.rs  types.rs  ws.rs
crates/orbit-web/src/api/: admin.rs  auth.rs  backends.rs  estimates.rs  files.rs  jobs.rs  mod.rs  stats.rs
crates/orbit-web/src/auth/: middleware.rs  mod.rs  models.rs
crates/orbit-web/src/components/: app.rs  dashboard.rs  job_form.rs  job_list.rs  login.rs  mod.rs  progress_bar.rs
crates/orbit-web/src/pages/: mod.rs
crates/orbit-web/src/utils/: mod.rs
crates/orbit-web/style/: input.css
dashboard/: DEPLOYMENT.md  MIGRATION_SUMMARY.md  README.md  TEST_REPORT.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
dashboard_backup/: DESIGN.md  eslint.config.js  package-lock.json
docs/: DELTA_IMPLEMENTATION_SUMMARY.md  DEPENDABOT_ISSUES.md  DISK_GUARDIAN.md  ERROR_HANDLING_IMPLEMENTATION.md  GETTING_STARTED.md  GUI_INTEGRATION.md  MANIFEST_SYSTEM.md  PROGRESS_AND_CONCURRENCY.md  PROTOCOL_GUIDE.md  README.md  S3_USER_GUIDE.md  SMB_NATIVE_STATUS.md  SYNC_MIRROR.md  WEB_GUI.md  file_structure_checklist.md  observability-v3.md
examples/: README.md  audit_logging_demo.rs  backup.orbitfilter  backup_script.sh  batch_compress.sh  disk_guardian_demo.rs  mirror.orbitfilter  network_transfer.sh  progress_demo.rs  sync_projects.sh  test_canonical.rs  universe_v3_integration.rs
orbit-ghost/: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODECOV_SETUP.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FAQ.md  GUIDE.md  INSTALL.md  Makefile  README.md  ROADMAP.md  TOOLING.md  WINDOWS.md  clippy.toml  codecov.yml  demo_quantum.sh  deny.toml  rustfmt.toml
orbit-ghost/.github/workflows/: ci.yml
orbit-ghost/src/: adapter.rs  config.rs  entangler.rs  error.rs  fs.rs  inode.rs  main.rs  oracle.rs  translator.rs
scripts/: README.md  analyze-logs.sh  analyze-metrics.py  benchmark_sync.ps1  demo-orbit-ci.bat  demo-orbit-ci.sh  (+9 more)
(+270 files in other folders)
