[workspace]
members = [
    ".",
    "crates/core-manifest",
    "crates/core-starmap",
    "crates/core-audit",
]

[package]
name = "orbit"
version = "0.4.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Intelligent file transfer with checksum, compression, resume capability, and protocol abstraction"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/saworbit/orbit"
keywords = ["file-copy", "resume", "compression", "checksum", "backup"]

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File I/O and progress
indicatif = "0.17"
walkdir = "2.5"

# Compression
lz4 = "1.25"
zstd = "0.13"

# Checksums
sha2 = "0.10"
blake3 = "1.5"

# Parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"

# System information
sysinfo = "0.35"

# Pattern matching
glob = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File metadata utilities
filetime = "0.2"
clap_complete = "4.5"

# Encoding
hex = "0.4"

# Logging/tracing
tracing = "0.1"

# Manifest system
orbit-core-manifest = { path = "crates/core-manifest" }
orbit-core-starmap = { path = "crates/core-starmap" }
orbit-core-audit = { path = "crates/core-audit" }

# SMB native dependencies (optional, feature-gated)
bytes = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"], optional = true }
smb = { version = "0.10.2", optional = true, default-features = false, features = ["async", "encrypt_aesgcm", "encrypt_aesccm", "sign_hmac", "sign_gmac", "sign_cmac", "compress_lz4", "compress_pattern_v1", "std-fs-impls", "netbios-transport"] }
async-trait = { version = "0.1", optional = true }
bitflags = { version = "2", optional = true }
zeroize = { version = "1", optional = true }

# S3 native dependencies (optional, feature-gated)
aws-config = { version = "1.5", default-features = false, features = ["behavior-version-latest", "rustls"], optional = true }
aws-sdk-s3 = { version = "1.50", default-features = false, features = ["rt-tokio", "rustls"], optional = true }
url = { version = "2.5", optional = true }

# Zero-copy support (Linux)
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "0.38", features = ["fs"] }
libc = "0.2"

# Zero-copy support (macOS/BSD)
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# Zero-copy support (Windows) - uses std library, no extra deps needed

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
assert_fs = "1.1"
predicates = "3.1"

[lib]
name = "orbit"
path = "src/lib.rs"

[[bin]]
name = "orbit"
path = "src/main.rs"

[[bench]]
name = "copy_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[features]
default = ["zero-copy"]

# Zero-copy system calls for maximum performance
zero-copy = []

# Protocol support (experimental)
protocols = []

# Native SMB2/3 client (pure Rust, async) - disabled by default
smb-native = ["dep:smb", "dep:tokio", "dep:async-trait", "dep:bitflags", "dep:zeroize", "dep:bytes"]

# Native S3 client (pure Rust, async) - disabled by default
s3-native = ["dep:aws-config", "dep:aws-sdk-s3", "dep:url", "dep:tokio", "dep:async-trait", "dep:bytes"]

# Full feature set
full = ["zero-copy", "protocols", "smb-native", "s3-native"]