[workspace]
members = [
    ".",
    "crates/core-manifest",
    "crates/core-starmap",
    "crates/core-audit",
    "crates/core-resilience",
    "crates/core-cdc",
    "crates/core-semantic",
    "crates/magnetar",
    "crates/orbit-web",  # V2.2.0: Renamed to orbit-server (package), keeping directory name for now
]

[package]
name = "orbit"
version = "0.5.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Alpha-stage file transfer tool with compression, resume, and parallel operations (not production-ready)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/saworbit/orbit"
keywords = ["file-copy", "resume", "compression", "checksum", "backup"]

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File I/O and progress
indicatif = "0.18"
walkdir = "2.5"
governor = "0.10"

# Compression
lz4 = "1.25"
zstd = "0.13"

# Checksums
sha2 = "0.10"
blake3 = "1.5"

# Parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"

# System information
sysinfo = "0.35"
notify = "8.2"
tempfile = "3.10"

# Pattern matching
glob = "0.3"
regex = "1.10"

# Unicode normalization for path handling (optional)
unicode-normalization = { version = "0.1", optional = true }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# File metadata utilities
filetime = "0.2"
clap_complete = "4.5"

# Extended attributes (optional, platform-specific)
xattr = { version = "1.3", optional = true }

# Encoding
hex = "0.4"
base64 = "0.22"

# Logging/tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Control Plane API integration (optional) - V2.2.0: Renamed from orbit-web to orbit-server
orbit-server = { path = "crates/orbit-web", optional = true, default-features = false }

# Random for backoff jitter
rand = "0.8"

# Manifest system
orbit-core-manifest = { path = "crates/core-manifest" }
orbit-core-starmap = { path = "crates/core-starmap" }
orbit-core-audit = { path = "crates/core-audit" }

# V2 Architecture
orbit-core-cdc = { path = "crates/core-cdc" }
orbit-core-semantic = { path = "crates/core-semantic" }

# SMB native dependencies (optional, feature-gated)
bytes = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs", "io-util"], optional = true }
smb = { version = "0.10.2", optional = true, default-features = false, features = ["async", "encrypt_aesgcm", "encrypt_aesccm", "sign_hmac", "sign_gmac", "sign_cmac", "compress_lz4", "compress_pattern_v1", "std-fs-impls", "netbios-transport"] }
async-trait = { version = "0.1", optional = true }
bitflags = { version = "2", optional = true }
zeroize = { version = "1", optional = true }

# S3 native dependencies (optional, feature-gated)
aws-config = { version = "1.5", default-features = false, features = ["behavior-version-latest", "rustls"], optional = true }
aws-sdk-s3 = { version = "1.113", default-features = false, features = ["rt-tokio", "rustls"], optional = true }
url = { version = "2.5", optional = true }

# SSH backend dependencies (optional, feature-gated)
ssh2 = { version = "0.9", optional = true }
secrecy = { version = "0.10", optional = true, features = ["serde"] }

# Async utilities for backend abstraction
futures = { version = "0.3", optional = true }
pin-project = { version = "1", optional = true }
once_cell = { version = "1.19", optional = true }

# Delta manifest persistence (optional)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# Zero-copy support (Linux)
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "0.38", features = ["fs"] }
libc = "0.2"

# Zero-copy support (macOS/BSD)
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# Zero-copy support (Windows) - uses std library, no extra deps needed

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
assert_fs = "1.1"
predicates = "3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
adler2 = "2.0"  # For Adler-32 test validation

[lib]
name = "orbit"
path = "src/lib.rs"

[[bin]]
name = "orbit"
path = "src/main.rs"

[[bench]]
name = "copy_benchmark"
harness = false

[[bench]]
name = "delta_throughput"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-min]
inherits = "release"
opt-level = "z"        # Optimize for size
lto = true             # Enable link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
strip = true           # Strip symbols
panic = "abort"        # Smaller panic handler

[features]
# Minimal default: local file copy only, zero-copy optimizations
# For network protocols or GUI, explicitly opt-in with --features
default = ["zero-copy"]

# Zero-copy system calls for maximum performance
zero-copy = []

# Protocol support (experimental, deprecated - use specific protocol features)
protocols = []

# Native SMB2/3 client (pure Rust, async) - OFF by default
smb-native = ["dep:smb", "dep:tokio", "dep:async-trait", "dep:bitflags", "dep:zeroize", "dep:bytes", "dep:futures", "backend-abstraction"]

# Native S3 client (pure Rust, async) - OFF by default
s3-native = ["dep:aws-config", "dep:aws-sdk-s3", "dep:url", "dep:tokio", "dep:async-trait", "dep:bytes", "backend-abstraction"]

# SSH backend support - OFF by default
ssh-backend = ["dep:ssh2", "dep:secrecy", "dep:tokio", "dep:async-trait", "dep:bytes", "backend-abstraction"]

# Unified backend abstraction layer - enables async backends with extensibility
backend-abstraction = ["dep:tokio", "dep:async-trait", "dep:futures", "dep:pin-project", "dep:bytes", "dep:secrecy", "dep:url", "dep:once_cell"]

# Control Plane API - OFF by default (use --features api to enable) - V2.2.0: Headless API server
api = ["dep:orbit-server", "dep:tokio"]

# Delta manifest persistence with SQLite - OFF by default
delta-manifest = ["dep:rusqlite"]

# Extended attributes and metadata preservation
extended-metadata = ["dep:xattr"]

# Unicode normalization for consistent path encoding
unicode-normalization = ["dep:unicode-normalization"]

# Convenience: All network protocols
network = ["s3-native", "smb-native", "ssh-backend"]

# Full feature set (for development and power users)
full = ["zero-copy", "network", "backend-abstraction", "delta-manifest", "extended-metadata", "api", "unicode-normalization"]

# --- CI & Local Development Optimization ---
# This profile override fixes "signal 7 [Bus error]" and "No space left on device" errors on CI.
# It tells Cargo to compile all external dependencies with full optimization and WITHOUT debug symbols.
# Result: ~60% smaller ./target folder, significantly lower linker memory usage, faster test execution.
[profile.dev.package."*"]
opt-level = 3       # Maximize optimization for dependencies (makes tests run faster too)
debug = 0           # Strip debug symbols from dependencies (saves massive disk/RAM)
strip = true        # Strip symbols from the final binary
codegen-units = 16  # Allow parallel code generation to speed up compile times
