[package]
name = "orbit-core-cdc"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Contributors"]
description = "Content-Defined Chunking engine for Orbit V2"
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = "1.5"
thiserror = "2.0"
tokio = { version = "1.42", features = ["fs", "io-util"], optional = true }

[features]
default = []
async = ["dep:tokio"]

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "cdc_benchmark"
harness = false
