[package]
name = "orbit-core-cdc"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Contributors"]
description = "Content-Defined Chunking engine for Orbit V2"
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"], optional = true }

[features]
default = []
async = ["dep:tokio"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "cdc_benchmark"
harness = false
