[package]
name = "orbit-core-manifest"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Manifest data structures and validation for Orbit"
license-file = "../../LICENSE"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing for content IDs
blake3 = "1.5"

# Error handling
thiserror = "1.0"

# JSON Schema validation
jsonschema = "0.22"

# UUID generation for job IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"