[package]
name = "orbit-core-manifest"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Manifest data structures and validation for Orbit"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

# JSON Schema validation
jsonschema = "0.22"

# UUID generation for job IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
