[package]
name = "orbit-core-resilience"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Pure-logic fault tolerance primitives for Orbit (Circuit Breaker, Rate Limiter, Connection Pool)"
license = "Apache-2.0"
repository = "https://github.com/saworbit/orbit"
keywords = ["resilience", "circuit-breaker", "rate-limiter", "connection-pool", "fault-tolerance"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["time", "sync"] }

# Rate limiting (optional)
governor = { version = "0.10", optional = true }

# Core utilities
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
tokio-test = "0.4"
tempfile = "3.10"

[features]
default = []
governor-impl = ["dep:governor"]
