[package]
name = "orbit-core-semantic"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Intent-based replication logic for Orbit V2 - smart adapters for file types"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
