[package]
name = "orbit-core-semantic"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Intent-based replication logic for Orbit V2 - smart adapters for file types"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# I/O Abstraction (Phase 1)
orbit-core-interface = { path = "../orbit-core-interface" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }
