[package]
name = "orbit-core-starmap"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Binary index (Star Map) for efficient chunk and window queries in Orbit"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

# Persistent embedded database (ACID-compliant)
redb = "2.1"

# Memory-mapped file access
memmap2 = "0.9"

# Efficient bitmap operations
bitvec = "1.0"

# Fast hashing for bloom filter
siphasher = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
