[package]
name = "magnetar"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Lightweight, embeddable state machine for managing idempotent jobs with persistent storage"
license = "Apache-2.0"
repository = "https://github.com/saworbit/orbit"
keywords = ["state-machine", "persistence", "jobs", "idempotent", "resume"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
rayon = "1.10"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"

# Optional backend dependencies
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }
redb = { version = "2.1", optional = true }
bincode = { version = "1", optional = true }

# Analytics (optional)
polars = { version = "0.43", features = ["parquet", "lazy"], optional = true }
arrow = { version = "53", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
tokio-test = "0.4"

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]
redb = ["dep:redb", "dep:bincode"]
analytics = ["dep:polars", "dep:arrow"]
all = ["sqlite", "redb", "analytics"]
