[package]
name = "magnetar"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Lightweight, embeddable state machine for managing idempotent jobs with persistent storage"
license = "Apache-2.0"
repository = "https://github.com/saworbit/orbit"
keywords = ["state-machine", "persistence", "jobs", "idempotent", "resume"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
toml = "0.9"
rayon = "1.10"
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"
tracing = "0.1"
blake3 = "1.5"

# Optional backend dependencies
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"], optional = true }
redb = { version = "2.1", optional = true }
bincode = { version = "1", optional = true }

# Analytics (optional)
polars = { version = "0.52", features = ["parquet", "lazy"], optional = true }
arrow = { version = "57", optional = true }

# Core Orbit crates
orbit-core-cdc = { path = "../core-cdc" }
orbit-core-starmap = { path = "../core-starmap" }
orbit-core-interface = { path = "../orbit-core-interface" }  # Phase 1: I/O Abstraction

# Resilience - now using the core-resilience crate
orbit-core-resilience = { path = "../core-resilience", optional = true }

# S3 integration example (optional)
aws-config = { version = "1.8", optional = true }
aws-sdk-s3 = { version = "1.118", optional = true }
hyper = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.8"
tokio-test = "0.4"

[features]
default = ["sqlite", "resilience"]
sqlite = ["dep:sqlx"]
redb = ["dep:redb", "dep:bincode"]
analytics = ["dep:polars", "dep:arrow"]
resilience = ["dep:orbit-core-resilience"]
resilience-governor = ["resilience", "orbit-core-resilience/governor-impl"]
s3-integration = ["resilience", "dep:aws-config", "dep:aws-sdk-s3", "dep:hyper"]
all = ["sqlite", "redb", "analytics", "resilience-governor", "s3-integration"]
