[package]
name = "orbit-connect"
version = "0.6.0-alpha.3"
edition = "2021"
authors = ["Orbit Team"]
description = "Client-side gRPC connectivity for Nucleus to control remote Stars"
license = "MIT OR Apache-2.0"

[dependencies]
# Core Orbit dependencies
orbit-core-interface = { path = "../orbit-core-interface" }
orbit-proto = { path = "../orbit-proto" }

# gRPC
tonic = "0.14"
prost = "0.14"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Utilities
futures = "0.3"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
