[package]
name = "orbit-core-interface"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Core I/O abstraction layer for Orbit - enables local and distributed filesystem operations"
license = "Apache-2.0"
repository = "https://github.com/saworbit/orbit"
keywords = ["filesystem", "abstraction", "async", "distributed", "io"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util", "fs"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
