[package]
name = "orbit-observability"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Contributors"]
description = "Unified observability, audit chaining, and telemetry for Orbit"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "registry"] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry_sdk = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# HMAC-SHA256 cryptography
ring = "0.17"

# Prometheus metrics
prometheus = "0.14"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }

[lib]
name = "orbit_observability"
path = "src/lib.rs"

[features]
default = []
opentelemetry = []
