[package]
name = "orbit-proto"
version = "0.6.0"
edition = "2021"
authors = ["Orbit Contributors"]
description = "gRPC protocol definitions for Orbit Grid"
license = "MIT"

[dependencies]
# gRPC runtime
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

# Async runtime
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[features]
default = []
