[package]
name = "orbit-sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Contributors"]
description = "Autonomous resilience engine for the Orbit Grid (Phase 5)"
license = "MIT OR Apache-2.0"

[dependencies]
# Orbit Grid dependencies
orbit-core-starmap = { path = "../core-starmap" }
orbit-connect = { path = "../orbit-connect" }
orbit-star = { path = "../orbit-star" }  # For AuthService
orbit-proto = { path = "../orbit-proto" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
