[package]
name = "orbit-web"
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Web GUI for Orbit file transfer orchestration"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Leptos full-stack framework
leptos = { version = "0.6", features = ["ssr"] }
leptos_axum = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# WASM support
getrandom = { version = "0.3", features = ["js"] }

# Internal dependencies
magnetar = { path = "../magnetar" }
orbit = { path = "../.." }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum/default",
]

[[bin]]
name = "orbit-web"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
