[package]
name = "orbit-server"
version = "2.2.0-beta.1"
edition = "2021"
authors = ["Shane Wall <shaneawall@gmail.com>"]
description = "Orbit Control Plane: Headless API and Orchestration Engine"
license = "Apache-2.0"

[dependencies]
# Core Orbit crates
magnetar = { path = "../magnetar", features = ["sqlite", "resilience"] }
orbit-core-manifest = { path = "../core-manifest" }
orbit-core-starmap = { path = "../core-starmap" }
orbit-core-audit = { path = "../core-audit" }

# API & Web Server
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# Documentation (The "Intelligence" Layer)
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Auth & Security
argon2 = "0.5"
jsonwebtoken = "9.0"
rand_core = { version = "0.6", features = ["std"] }

# Database
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }

# Real-time
futures = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[[bin]]
name = "orbit-server"
path = "src/main.rs"

[lib]
crate-type = ["lib"]
